# atlas

./: .gitignore  .licenserc.yaml  AGENTS.md  BATCHED_DECODE_GRAPH_DESIGN.md  BATCHED_VIT_DESIGN.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FINDINGS-27B-ATLAS.md  GDN_NVFP4_NATIVE_PLAN.md  HANDOFF-nvidia-qwen27b-fp8-attn.md  HANDOFF-perrow-fp8-ornith.md  HANDOFF.md  HOLO_MIXED_STEP_SPEC.md  MMQ_PORT_HANDOFF.md  README.md  TRANSPOSED_FP4_MOE_DESIGN.md  VIT_ATTN_KERNEL_DESIGN.md  VLLM_PARITY_POC.md  _typos.toml  bench-gdn.sh  handoff.md  scratch_llama_perf.txt  scratch_llama_perf2.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  file-size-cap.yml  security.yml  site.yml
3rdparty_patches/b12x_aot/: STATUS.md  b12x_dyn_0.geom.txt  b12x_dyn_0.h  b12x_export.py  b12x_harness.cpp  b12x_moe_aot_export.patch  b12x_shim.cpp  proof_sfb_atom.py
3rdparty_patches/gdn_aot/: STATUS.md  delta_rule_sm120_aot_export.patch  delta_rule_sm120_f32_inverse.patch  delta_rule_sm120_f32_out.patch  delta_rule_sm120_sm121a.patch  gdn_dump_meta.py  gdn_export.py  gdn_export_f32.py  gdn_harness.cpp  gdn_harness_carry.cpp  gdn_harness_packed.cpp  gdn_holo_0.h  gdn_rs.rs  gdn_shim.cpp  gdn_transpose.cu
3rdparty_patches/marlin_moe_aot/: README.md  atlas_marlin_moe.cu  build.sh
bench/: bench-atlas-concurrency.py  bench_isl_osl.py  holo_fp4_gateup_ab.py  needle_longctx.py
bench/tool_format_eval/: GROUND_TRUTH_RESULT.md  KERNEL_LOCALIZATION.md  README.md  compare_endpoints.py  cosine_atlas_vllm.py  dump_analyze.py  harness.py  logit_probe.py  threeway_vs_bf16_truth.py
crates/atlas-core/src/: config.rs
crates/atlas-expert-pack/: Cargo.toml
crates/atlas-expert-pack/src/: build.rs  checkpoint.rs  lib.rs  main.rs  safetensors_min.rs  transpose.rs
crates/atlas-expert-pack/tests/: build_synthetic.rs
crates/atlas-kernels/: build.rs  build_codegen.rs  build_parse.rs  build_target.rs
crates/atlas-power/: Cargo.toml
crates/atlas-power/examples/: overhead.rs  probe.rs
crates/atlas-power/src/: attribute.rs  classify.rs  lib.rs  monitor.rs  source.rs  span.rs  spbm.rs
crates/atlas-rdma/: Cargo.toml  build.rs
crates/atlas-tier/: Cargo.toml
crates/atlas-tier/src/: direct_swap.rs  hash.rs  lib.rs  mem.rs  residency.rs
crates/atlas-tier/tests/: direct_swap.rs  residency.rs
crates/spark-model/: Cargo.toml
crates/spark-nllb/: Cargo.toml  README.md
crates/spark-runtime/: build.rs
crates/spark-server/: Cargo.toml  tool_defaults.toml
crates/spark-storage/: Cargo.toml  build.rs
docker/: docker-guide.md
docker/gb10/: Dockerfile.builder  seccomp-io_uring.README.md  seccomp-io_uring.json
docs/: METAL_BACKEND.md  PREFILL_GPU_BUBBLE_ANALYSIS.md  lora-codebase-brief.md  lora-implementation-status.md  lora-mvp-proposal.md
docs/design/: lora-moe-embed.md  lora-solid.md
docs/perf/: qwen36-35b-a3b-nvfp4-gb10-decode-loop-2026-07-17.md  qwen36-35b-a3b-nvfp4-gb10.md
docs/porting/: holo-3.1-handoff.md  holo-3.1-optimization-roadmap.md  holo-3.1-vllm-poc.md
docs/streaming-experts/: B12X-PARENT-RUNBOOK.md  CODEX-HANDOFF-3-WARM-TTFT.md  DECODE-RING-ROLLING-TIER.md  DECODE-SPILL-HOST-STAGING-FINDINGS.md  GATE0.md  HANDOFF-2026-07-08-ssm-tier.md  HANDOFF-2026-07-11-b12x-gdn.md  HANDOFF.md  KV-PAGING-MIGRATION.md  LONGCTX-NEEDLE-BENCHMARK.md  LORA-STATUS.md  PHASE2-PREFILL-STREAMER.md  PREFILL-WINDOW-SWEEP-FINDINGS.md  RDMA-KV-TIER.md  RDMA-WEIGHT-TIER.md  README.md  RESEARCH-RDMA-TIER.md  TIERED-CACHE-CONSOLIDATION.md  UNIFIED-TIER-PLAN.md
jinja-templates/: README.md  deepseek_v4.jinja  laguna.jinja
scripts/: bench_holo_atlas.py  bench_nllb_multilingual.py  burst_tbt.py  dev-sccache.sh  gen_moe_lora_adapter.py  gen_test_images.py  holo_serve.sh  holo_serve_dflash.sh  holo_serve_fp4_ab.sh  launch_bench.sh  nllb_bench_corpus_1000.txt  rdma-harness.env.example  rdma-integration-harness.sh  realistic_soak.py  start-minimax-ep2.sh  vision_ttft_bench.py
scripts/streaming-experts/: ssm_deep.py  verify_logits.sh  verify_verbs.sh
site/: package.json  vite.config.js
site/scripts/: gen-benchmarks.mjs  gen-models.mjs  gen-stars.mjs
site/src/: app.css  app.html
site/static/: llms.txt  robots.txt  sitemap.xml
tests/: metal_kv_kld_compare.py  run_all_models.py  single_gpu_suite.py  stack_model_smoke.sh
(+723 files in other folders)
