# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "atlas-expert-pack"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "Offline builder: checkpoint NVFP4 experts -> resident-layout expert-stream store"

[[bin]]
name = "atlas-expert-pack"
path = "src/main.rs"

[[bin]]
name = "atlas-expert-peer"
path = "src/bin/expert_peer_main.rs"

[[bin]]
name = "atlas-kv-peer"
path = "src/bin/kv_peer_main.rs"

[[bin]]
name = "atlas-weight-peer"
path = "src/bin/weight_peer_main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
# Pure format/geometry surface only — no CUDA needed to build the store or peer.
spark-storage = { path = "../spark-storage", default-features = false }

[lints]
workspace = true
